<resources>
    <string name="app_name">ToDo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="newTaskDialog_title">New Task</string>
    <string name="newTaskDialog_positiveButton">Create</string>
    <string name="newTaskDialog_negativeButton">Cancel</string>
    <string name="newTaskDialog_titleHint">Title</string>

    <string name="removeTaskButton_text">Remove Task</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- Login Strings -->
    <string name="login_email_prompt">Email Address</string>
    <string name="login_password_prompt">Password</string>
    <string name="login_button">Login</string>
    <string name="login_sign_up_button">Sign Up</string>

    <!-- Sign Up Strings -->
    <string name="sign_up_email_prompt">Email Address</string>
    <string name="sign_up_password_prompt">Password</string>
    <string name="sign_up_first_name">First Name</string>
    <string name="sign_up_last_name">Last Name</string>
    <string name="sign_up_phone_number">Phone Number</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_up_phone">Phone Number</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <!-- Errors -->
    <string name="error_login">Error logging in: </string>
    <string name="error_signup">Error signing up: </string>

</resources>
