<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="etbrady.makeplans.activities.SignUpActivity"
    android:background="@color/primary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true" >

        <EditText
            android:id="@+id/edittext_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_first_name"
            android:textColor="@color/icons"
            android:textColorHint="@color/primary_light"/>

        <EditText
            android:id="@+id/edittext_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_last_name"
            android:textColor="@color/icons"
            android:textColorHint="@color/primary_light"/>

        <EditText
            android:id="@+id/edittext_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_phone"
            android:inputType="phone"
            android:textColor="@color/icons"
            android:textColorHint="@color/primary_light"/>

        <EditText
            android:id="@+id/edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/sign_up_email_prompt"
            android:textColor="@color/icons"
            android:textColorHint="@color/primary_light"/>

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/sign_up_password_prompt"
            android:textColor="@color/icons"
            android:textColorHint="@color/primary_light"/>

        <Button android:id="@+id/button_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_button"
            android:background="@color/accent"
            android:textColor="@color/icons"/>
    </LinearLayout>

</RelativeLayout>